--- a/MissionariesAndCannibals/game.css
+++ b/MissionariesAndCannibals/game.css
@@ -11,7 +11,7 @@ html,body
 }
 #container
 {
-	background-image: url("images/back.png");
+	background-image: url("images/bg1.png");
 	background-repeat: no-repeat;
     background-size: 100% 100%;
 	border-radius: 20px;
