--- a/client/src/components/Signup.css
+++ b/client/src/components/Signup.css
@@ -1,27 +1,164 @@
-.Login{
-    background-color: #111315;
-    color : white;
-    display: block;
-    height: 100vh;
-    font-size: 16px;
+.Logo {
+	align-items: center;
+	margin-bottom: 50px;
+	width: 110px;
 }
-form{
-    border: 2px #6F767E;
-    gap: 16px;
-    padding: 6px;
-    border-radius: 4px;
 
+.chunxo{
+	display: flex;
 }
-button{
-    background-color: #FBBC05;
-    color : white; 
-    border-radius: 4px;
-    justify-content: center;
+
+button {
+	border-radius: 20px;
+	border: 1px solid #e4d9ad;
+	background-color: #f8bb0f;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
 }
-input{
-    display: block;
-    background-color: #111315;
-    color : white; 
-    gap: 16px;
-    border-radius: 4px;
+
+
+form {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 50px;
+	height: 70%;
+	text-align: center;
+}
+
+input {
+	background-color: #18191b;
+    color : white;
+	border: none;
+	padding: 12px 15px;
+	margin: 8px 0;
+	width: 100%;
+	max-width: 400px;
+}
+
+.container {
+	background-color: #111315;
+    color : white;
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+			0 10px 10px rgba(0,0,0,0.22);
+	position: relative;
+	overflow: hidden;
+    height: 100vh;  
+}
+
+.form-container {
+	position: absolute;
+	top: 0;
+	height: 100%;
+}
+
+.sign-in-container {
+	left: 0;
+	width: 50%;
+	z-index: 2;
+}
+
+.container.right-panel-active .sign-in-container {
+	transform: translateX(100%);
+}
+
+.sign-up-container {
+	left: 0;
+	width: 50%;
+	z-index: 1;
+}
+
+.container.right-panel-active .sign-up-container {
+	transform: translateX(100%);
+	z-index: 5;
+	animation: show 0.6s;
+}
+
+
+.overlay-container {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 50%;
+	height: 100%;
+	overflow: hidden;
+	transition: transform 0.6s ease-in-out;
+	z-index: 100;
+}
+
+.container.right-panel-active .overlay-container{
+	transform: translateX(-100%);
+}
+
+.overlay {
+	background: #f8bb0f;
+	background: -webkit-linear-gradient(to right, #f8bb0f, #f8bb0f);
+	background: linear-gradient(to right, #f8bb0f, #f8bb0f);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 0 0;
+	color: #FFFFFF;
+	position: relative;
+	left: -100%;
+	height: 100%;
+	width: 200%;
+  	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
+}
+
+.container.right-panel-active .overlay {
+  	transform: translateX(50%);
+}
+
+.overlay-panel {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 40px;
+	text-align: center;
+	top: 0;
+	height: 100%;
+	width: 50%;
+	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+	transform: translateX(-20%);
+}
+
+.container.right-panel-active .overlay-left {
+	transform: translateX(0);
+}
+
+.overlay-right {
+	right: 0;
+	transform: translateX(0);
+}
+
+.container.right-panel-active .overlay-right {
+	transform: translateX(20%);
+}
+
+.social-container {
+	margin: 20px 0;
+}
+
+.social-container a {
+	border: 1px solid #DDDDDD;
+	border-radius: 50%;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 5px;
+	height: 40px;
+	width: 40px;
 }
