prathical quiz finished

--- a/client/src/components/PraticalQuiz.css
+++ b/client/src/components/PraticalQuiz.css
@@ -1,17 +1,23 @@
-.quiz-container {
+.quiz-container{
+    height: 100vh;
+}
+.quiz-content {
     display: flex;
     flex-direction: row;
     height: 100vh;
-  }
+}
   
-  .markdown-section,
-  .code-section {
+  .markdown-container,
+  .user-input-container {
     flex: 1;
-    padding: 20px;
+    padding: 10px;
     overflow-y: auto;
+    background-color: #303235;
+    margin: 20px;
+    border-radius: 5px;
   }
   
-  .code-section {
+  .user-input-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,6 +30,8 @@
     padding: 10px;
     font-family: monospace;
     font-size: 14px;
+    background-color: #616264;
+    color:#ddd;
   }
   
   button {
